[gd_scene load_steps=12 format=3 uid="uid://bcyg1w7ev5m1i"]

[ext_resource type="Script" uid="uid://b6vd74bxuq7w2" path="res://scenes/main.gd" id="1_60wdx"]
[ext_resource type="PackedScene" uid="uid://bu2vv8eojvcvj" path="res://scenes/ai_player.tscn" id="2_sugp2"]
[ext_resource type="PackedScene" uid="uid://rhnn0sni11dp" path="res://scenes/arrow.tscn" id="4_tbgi4"]
[ext_resource type="PackedScene" uid="uid://2g0xhrxfpgto" path="res://scenes/player.tscn" id="5_tbgi4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ground"]
size = Vector2(1200, 744)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_sugp2"]

[sub_resource type="FontFile" id="FontFile_ui_font"]
cache/0/24/0/ascent = 0.0
cache/0/24/0/descent = 0.0
cache/0/24/0/underline_position = 0.0
cache/0/24/0/underline_thickness = 0.0
cache/0/24/0/scale = 1.0
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_ui_text"]
font = SubResource("FontFile_ui_font")
font_size = 24
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Gradient" id="Gradient_jyhfs"]
colors = PackedColorArray(1, 1, 1, 0.2, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_tbgi4"]
gradient = SubResource("Gradient_jyhfs")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_tefeu"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(600, 300, 0)
angle_min = -180.0
angle_max = 180.0
initial_velocity_min = -20.0
initial_velocity_max = 20.0
gravity = Vector3(0, 98, 0)
scale_min = 0.5
scale_max = 1.5
color = Color(1, 0.9, 0.7, 0.1)

[node name="Main" type="Node2D"]
script = ExtResource("1_60wdx")
ai_player_scene = ExtResource("2_sugp2")

[node name="Ground" type="StaticBody2D" parent="."]
position = Vector2(600, 550)
metadata/_edit_group_ = true

[node name="Collision" type="CollisionShape2D" parent="Ground"]
position = Vector2(0, 347)
shape = SubResource("RectangleShape2D_ground")

[node name="Sprite2D" type="Sprite2D" parent="Ground"]
position = Vector2(-1, 74.5)
scale = Vector2(1194, 189)
texture = SubResource("PlaceholderTexture2D_sugp2")

[node name="Player" parent="." instance=ExtResource("5_tbgi4")]
unique_name_in_owner = true
material = null
position = Vector2(180, 477)
arrow_scene = ExtResource("4_tbgi4")

[node name="UI" type="CanvasLayer" parent="."]

[node name="StatusLabel" type="Label" parent="UI"]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 80.0
grow_horizontal = 2
text = "Score: 0"
label_settings = SubResource("LabelSettings_ui_text")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerHealthLabel" type="Label" parent="UI"]
unique_name_in_owner = true
offset_left = 20.0
offset_top = 20.0
offset_right = 220.0
offset_bottom = 50.0
text = "Player HP: 100"
label_settings = SubResource("LabelSettings_ui_text")
vertical_alignment = 1

[node name="PlayerStaminaLabel" type="Label" parent="UI"]
unique_name_in_owner = true
offset_left = 20.0
offset_top = 59.0
offset_right = 220.0
offset_bottom = 93.0
text = "Player Stamina: 100"
label_settings = SubResource("LabelSettings_ui_text")
vertical_alignment = 1

[node name="AIHealthLabel" type="Label" parent="UI"]
unique_name_in_owner = true
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -220.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 50.0
grow_horizontal = 0
text = "Enemy HP: 100"
label_settings = SubResource("LabelSettings_ui_text")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Camera2D" type="Camera2D" parent="."]
unique_name_in_owner = true
offset = Vector2(0, -800)
anchor_mode = 0

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
z_index = 100
position = Vector2(603, -96)
amount = 50
texture = SubResource("GradientTexture2D_tbgi4")
lifetime = 25.0
preprocess = 2.0
process_material = SubResource("ParticleProcessMaterial_tefeu")

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.45098, 0.658824, 0.792157, 1)
